markAllProcessing fixed