@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Service
 @RequiredArgsConstructor
@@ -40,8 +41,9 @@ public class DefaultActionTimeoutService implements ActionTimeoutService {
     }
 
     public void markAllProcessing(final List<IdReference> list)    {
-        actionTimeoutRepository.saveAll(actionTimeoutRepository
-                .findAllById(list.stream().map(IdReference::getId).collect(Collectors.toList())));
+        actionTimeoutRepository.saveAll(StreamSupport.stream(actionTimeoutRepository
+                .findAllByActionIdIn(list.stream().map(IdReference::getId).toList()).spliterator(), false)
+                .map(x -> x.withProcessing(true)).toList());
     }
 
 }
